[metadata]
name = esm_pism
description = Plugins for using the PISM Ice Sheet Model within the ESM Tools Framework
description-file = README.rst
author = Paul Gierz
author-email = paul.gierz@awi.de
license = GPLv3

[options]
install_requires =
        netcdf4
        xarray
        loguru


[entry_points]
esm_tools.plugins = 
        pism_set_couplers = esm_pism.plugin:pism_set_couplers
        pism_set_kv_pairs = esm_pism.plugin:pism_set_kv_pairs
        pism_set_flags = esm_pism.plugin:pism_set_flags
        pism_override_file = esm_pism.plugin:pism_override_file
        pism_assemble_command = esm_pism.plugin:pism_assemble_command 
